--- a/_doc/bibliography.bib
+++ b/_doc/bibliography.bib
@@ -34,6 +34,14 @@
   doi={10.1007/s00211-020-01167-3}
 }
 
+@article{frittelli2023elliptic,
+title = {Virtual element method for elliptic bulk-surface {PDEs} in three space dimensions},
+author={Frittelli, M and Madzvamuse, A and Sgura, I},
+journal = {Numerical Methods for Partial Differential Equations},
+volume = {Under minor revision},
+year = {2023}
+}
+
 @article{frittelli2023bsrds,
 title={The bulk-surface virtual element method for reaction-diffusion
 {PDEs}: analysis and applications},
@@ -41,7 +49,7 @@ title={The bulk-surface virtual element method for reaction-diffusion
   journal={Communications in Computational Physics},
   volume={Accepted},
   year={2023},
-  publisher={Global Science Press}
+  doi={10.4208/cicp.OA-2022-0204}
 }
 
 @article{cangiani2017posteriori,
@@ -52,6 +60,15 @@ title={The bulk-surface virtual element method for reaction-diffusion
   pages={857--893},
   year={2017},
   doi={10.1007/s00211-017-0891-9}
+}
+
+@misc{wells2022velocitybased,
+      title={A Velocity-based Moving Mesh Virtual Element Method}, 
+      author={Wells, H and Hubbard, M E and Cangiani, A},
+      year={2022},
+      eprint={2211.13521},
+      archivePrefix={arXiv},
+      primaryClass={math.NA}
 }
 
 @article{van2022mesh,
@@ -442,4 +459,26 @@ title={The bulk-surface virtual element method for reaction-diffusion
 	author = {Frittelli, M and Madzvamuse, A and Sgura, I and Venkataraman, C},
 	title = {Lumped finite elements for reaction--cross--diffusion systems on stationary surfaces},
 	journal = {Computers \& Mathematics with Applications}
+}
+
+ @article{lorensen1987marching,
+  title={Marching cubes: A high resolution 3D surface construction algorithm},
+  author={Lorensen, W E and Cline, H E},
+  journal={ACM siggraph computer graphics},
+  volume={21},
+  number={4},
+  pages={163--169},
+  year={1987},
+  doi={10.1145/37402.37422}
+}
+
+@article{Beirao_da_Veiga_2017_stability,
+	doi = {10.1142/s021820251750052x},
+	year = 2017,
+	volume = {27},
+	number = {13},
+	pages = {2557--2594},
+	author = {Beir{\~{a}}o da Veiga, L and  Lovadina, C and Russo, A},
+	title = {Stability analysis for the virtual element method},
+	journal = {Mathematical Models and Methods in Applied Sciences}
 }
