Paper updated with Anotida's comments

--- a/_doc/bibliography.bib
+++ b/_doc/bibliography.bib
@@ -38,7 +38,10 @@
 title = {Virtual element method for elliptic bulk-surface {PDEs} in three space dimensions},
 author={Frittelli, M and Madzvamuse, A and Sgura, I},
 journal = {Numerical Methods for Partial Differential Equations},
-volume = {Under minor revision},
+volume={39},
+  number={6},
+  pages={4221--4247},
+  doi={10.1002/num.23040},
 year = {2023}
 }
 
@@ -47,7 +50,7 @@ title={The bulk-surface virtual element method for reaction-diffusion
 {PDEs}: analysis and applications},
   author={Frittelli, M and Madzvamuse, A and Sgura, I},
   journal={Communications in Computational Physics},
-  volume={Accepted},
+  volume={Accepted for publication},
   year={2023},
   doi={10.4208/cicp.OA-2022-0204}
 }
